--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<mainClass>com.hrodriguesdev.TratamentoMgcApplication</mainClass>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.openjfx</groupId>
@@ -36,6 +36,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.16</version>
+		</dependency>
+		<dependency>
+			<groupId>org.vesalainen.comm</groupId>
+			<artifactId>javaxcomm</artifactId>
+			<version>1.0.1</version>
 		</dependency>
 	</dependencies>
 
